# gh-workflow-hardener

./: .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  action.yml  article-draft.md  article-final.md  hardener.py  marketplace-listing.md  pyproject.toml
.github/workflows/: action.yml
fixtures/: partial.yml  pwn_request.yml  safe.yml  vulnerable.yml  workflow_run_unsafe.yml
gh_workflow_hardener/: cli.py  validator.py
src/: validator.py
tests/: __init__.py  test_hardener.py  test_validator.py
